fixing button alignment and color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,13 +100,13 @@ input, select, textarea {
 
 	/* Style buttons */
 	.transcript {
-		background-color: DodgerBlue; /*originally dodgerblue*/
+		background-color:lightskyblue; /*originally dodgerblue*/
 		border: none;
 		color: white;
 		padding: 12px 30px;
 		cursor: pointer;
 		font-size: 20px;
-		align-items: center;
+		align-self: center;
 	}
 	
 	/* Darker background on mouse-over */
